Updated the specification. Also updated the function relying on the pending changes to the core-shared repo.
